# config-env

./: .gitignore  README.md  app.py  pyproject.toml  setup.cfg
src/config_env/: __init__.py  config_env.py
tests/: test1.py  test2.py  test3.py
