[metadata]
name = config_env
version = 0.0.2
author = Raslan Ribeiro
author_email = raslan@poli.ufrj.br
description = Manage enviroment variables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raslanribeiro/config_env
project_urls =
    Bug Tracker = https://github.com/raslanribeiro/config_env/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = python-dotenv==0.19.1

[options.packages.find]
where = src
